--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ id: pt
     <title>Verde Gosto</title>
     <meta name="keywords" value="" />
     <meta name="description" value="" />
-    <link rel="icon" href="assets/sites/56420f55ef47707e2e000002/theme/images/faviconc84f.ico?704135a07a5023f9a34ac79d21d58613" type="image/ico" sizes="16x16">
+    <link rel="icon" href="assets/sites/56420f55ef47707e2e000002/theme/images/faviconc84f.ico" type="image/ico" sizes="16x16">
     <link href='assets/fonts.googleapis.com/csse3e5.css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='assets/fonts.googleapis.com/css22c1.css?family=Sansita+One' rel='stylesheet' type='text/css'>
     <link href='assets/fonts.googleapis.com/cssc698.css?family=Montserrat+Subrayada' rel='stylesheet' type='text/css'>
@@ -19,9 +19,9 @@ id: pt
     <link href="assets/maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="assets/ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-    <link href="assets/sites/56420f55ef47707e2e000002/theme/stylesheets/application8381.css?58e3ae2ce9c31d6ad3812ce054328fdc" media="screen" rel="stylesheet" type="text/css">
-    <script src="assets/sites/56420f55ef47707e2e000002/theme/javascripts/vendor/jquery.form67df.js?08a24670beb2eae7ef79a6d5ac23874b" type="text/javascript" ></script>
-    <script src="assets/sites/56420f55ef47707e2e000002/theme/javascripts/application.mind430.js?ccbc1a3a7de4f0e180e7d4f38b96977e" type="text/javascript" ></script>
+    <link href="assets/sites/56420f55ef47707e2e000002/theme/stylesheets/application8381.css" media="screen" rel="stylesheet" type="text/css">
+    <script src="assets/sites/56420f55ef47707e2e000002/theme/javascripts/vendor/jquery.form67df.js" type="text/javascript" ></script>
+    <script src="assets/sites/56420f55ef47707e2e000002/theme/javascripts/application.mind430.js" type="text/javascript" ></script>
   </head>
 
   <body class="index">
@@ -33,15 +33,15 @@ id: pt
         <source src="assets/videos/stock-footage-red-wine-pouring-slow-motion.webm" type="video/webm">
         <source src="assets/videos/stock-footage-red-wine-pouring-slow-motion.ogv" type="video/ogg">
 
-        <div class="fullscreen fill-background" style="background-image: url(assets/sites/56420f55ef47707e2e000002/theme/images/background382f.jpg?afe693472a1548bf8013619329577f14)"></div>
+        <div class="fullscreen fill-background" style="background-image: url(assets/sites/56420f55ef47707e2e000002/theme/images/background382f.jpg)"></div>
       </video>
 
       <div  >
-        <a class="verde-gosto-full-logo" style="background-image: url(assets/sites/56420f55ef47707e2e000002/theme/images/logo3cbcf.png?9e802384592b37e6865365b9801a60f6); background-repeat: no-repeat;" href="menu.html"><span>Vinhos & Azeite</span></a>
+        <a class="verde-gosto-full-logo" style="background-image: url(assets/sites/56420f55ef47707e2e000002/theme/images/logo3cbcf.png); background-repeat: no-repeat;" href="menu.html"><span>Vinhos & Azeite</span></a>
       </div>
 
       <div class="verde-gosto-small-logo">
-        <a href="menu.html" ><img src="assets/sites/56420f55ef47707e2e000002/theme/images/vgd706.png?58eb291c0b02c4db6b15f1c87f0123d4"></a>
+        <a href="menu.html" ><img src="assets/sites/56420f55ef47707e2e000002/theme/images/vgd706.png"></a>
       </div>
 
       <div class="fullscreen"
@@ -59,7 +59,7 @@ id: pt
             <button class="confirmation-button yes">Sim</button>
             <button class="no">Não</button>
           </form>
-          <div class="flags" style="background-image: url(assets/sites/56420f55ef47707e2e000002/theme/images/flags6046.png?806abe215d25a5e44bcf91eb604cce57)">
+          <div class="flags" style="background-image: url(assets/sites/56420f55ef47707e2e000002/theme/images/flags6046.png)">
             <a href="index.html" class="pt"><span>Português</span></a>
             <a href="en.html" class="en"><span>English</span></a>
             <a href="fr.html" class="fr"><span>Français</span></a>
