--- a/contactos.html
+++ b/contactos.html
@@ -361,7 +361,7 @@ a.header-link:hover { text-transform: uppercase; font-family: "Montserrat Subray
         <a href="https://www.linkedin.com/"><img src="assets/sites/56420f55ef47707e2e000002/theme/images/in_logoa97f.png?fd3a7bdd1b30fdc36a7e8f1eda4d5a63" alt=""></a>
         <a href="https://www.facebook.com/"><img src="assets/sites/56420f55ef47707e2e000002/theme/images/fb_logo0efc.png?1c060921b1b21609a6ef31425488b74f" alt=""></a>
       </div>
-      {% include form.html %}
+      <!--{% include form.html %}-->
     </div>
   </div>
 </div>
